// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/IRS Reports/IRSReportingMap calls GisidaLite with the correct props: GisidaLite layers 1`] = `
Array [
  "main-plan-layer-92a0c5f3-8b47-465e-961b-2998ad3f00a5",
  "irs_report_structures-point",
  "irs_report_structures-fill-line",
  "irs_report_structures-fill",
]
`;

exports[`components/IRS Reports/IRSReportingMap does not show not sprayed reasons count if they are not: No sprayed reasons 1`] = `null`;

exports[`components/IRS Reports/IRSReportingMap does not show not sprayed reasons count if they are not: Response item titles 1`] = `
Array [
  <h6>
    Spray Coverage (Effectiveness)
  </h6>,
  <h6>
    Found Coverage
  </h6>,
  <h6>
    Spray Success Rate (PMI SC)
  </h6>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Indicator item breakdown 1`] = `
Array [
  <p
    className="indicator-breakdown"
  >
    Progress: 
    7 of 14 structure(s)
     
    (50%)
  </p>,
  <p
    className="indicator-breakdown"
  >
    Progress: 
    14 of 14 structure(s)
     
    (100%)
  </p>,
  <p
    className="indicator-breakdown"
  >
    Progress: 
    7 of 14 structure(s)
     
    (50%)
  </p>,
  <p
    className="indicator-breakdown"
  >
    7 of 14 structures not sprayed
     
  </p>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Legend items 1`] = `
Array [
  <div
    className="sidebar-legend-item"
    key="0"
  >
    <span
      className="sidebar-legend-color"
      style={
        Object {
          "backgroundColor": "#68BB0C",
        }
      }
    />
    <span
      className="sidebar-legend-label"
    >
      Complete
    </span>
  </div>,
  <div
    className="sidebar-legend-item"
    key="1"
  >
    <span
      className="sidebar-legend-color"
      style={
        Object {
          "backgroundColor": "#F12525",
        }
      }
    />
    <span
      className="sidebar-legend-label"
    >
      Not Sprayed
    </span>
  </div>,
  <div
    className="sidebar-legend-item"
    key="2"
  >
    <span
      className="sidebar-legend-color"
      style={
        Object {
          "backgroundColor": "#68BB0C",
        }
      }
    />
    <span
      className="sidebar-legend-label"
    >
      Partially Sprayed
    </span>
  </div>,
  <div
    className="sidebar-legend-item"
    key="3"
  >
    <span
      className="sidebar-legend-color"
      style={
        Object {
          "backgroundColor": "#FFCA16",
        }
      }
    />
    <span
      className="sidebar-legend-label"
    >
      Not Visited
    </span>
  </div>,
  <div
    className="sidebar-legend-item"
    key="4"
  >
    <span
      className="sidebar-legend-color"
      style={
        Object {
          "backgroundColor": "#000",
        }
      }
    />
    <span
      className="sidebar-legend-label"
    >
      Not Eligible
    </span>
  </div>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: No sprayed reasons 1`] = `
<ul
  className="list-unstyled"
>
  <li
    className="indicator-breakdown"
    key="locked"
  >
    locked
     - 
    13
     
    structure(s)
  </li>
  <li
    className="indicator-breakdown"
    key="refused"
  >
    refused
     - 
    2
     
    structure(s)
  </li>
  <li
    className="indicator-breakdown"
    key="other"
  >
    other
     - 
    1
     
    structure(s)
  </li>
</ul>
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Response item ProgressBar 1`] = `
Array [
  <ProgressBar
    animate={false}
    cssClass="progress-bar-striped"
    decimalPoints={0}
    height="10px"
    lineColor="#0000FF"
    lineColorThresholds={
      Object {
        "GREEN_THRESHOLD": Object {
          "color": "#2ECC40",
          "name": "Green",
          "orEquals": true,
          "value": 1,
        },
        "GREY_THRESHOLD": Object {
          "color": "#dddddd",
          "name": "Grey",
          "value": 0.2,
        },
        "RED_THRESHOLD": Object {
          "color": "#FF4136",
          "name": "Red",
          "orEquals": true,
          "value": 0.75,
        },
        "YELLOW_THRESHOLD": Object {
          "color": "#FFDC00",
          "name": "Yellow",
          "value": 0.9,
        },
      }
    }
    max={100}
    min={0}
    showLabel={false}
    stripped={false}
    value={50}
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="progress-bar 
          "
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#FF4136",
            "width": "50%",
          }
        }
      />
    </div>
  </ProgressBar>,
  <ProgressBar
    animate={false}
    cssClass="progress-bar-striped"
    decimalPoints={0}
    height="10px"
    lineColor="#0000FF"
    lineColorThresholds={
      Object {
        "GREEN_THRESHOLD": Object {
          "color": "#2ECC40",
          "name": "Green",
          "orEquals": true,
          "value": 1,
        },
        "GREY_THRESHOLD": Object {
          "color": "#dddddd",
          "name": "Grey",
          "value": 0.2,
        },
        "RED_THRESHOLD": Object {
          "color": "#FF4136",
          "name": "Red",
          "orEquals": true,
          "value": 0.75,
        },
        "YELLOW_THRESHOLD": Object {
          "color": "#FFDC00",
          "name": "Yellow",
          "value": 0.9,
        },
      }
    }
    max={100}
    min={0}
    showLabel={false}
    stripped={false}
    value={100}
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={100}
        className="progress-bar 
          "
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#2ECC40",
            "width": "100%",
          }
        }
      />
    </div>
  </ProgressBar>,
  <ProgressBar
    animate={false}
    cssClass="progress-bar-striped"
    decimalPoints={0}
    height="10px"
    lineColor="#0000FF"
    lineColorThresholds={
      Object {
        "GREEN_THRESHOLD": Object {
          "color": "#2ECC40",
          "name": "Green",
          "orEquals": true,
          "value": 1,
        },
        "GREY_THRESHOLD": Object {
          "color": "#dddddd",
          "name": "Grey",
          "value": 0.2,
        },
        "RED_THRESHOLD": Object {
          "color": "#FF4136",
          "name": "Red",
          "orEquals": true,
          "value": 0.75,
        },
        "YELLOW_THRESHOLD": Object {
          "color": "#FFDC00",
          "name": "Yellow",
          "value": 0.9,
        },
      }
    }
    max={100}
    min={0}
    showLabel={false}
    stripped={false}
    value={50}
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={50}
        className="progress-bar 
          "
        role="progressbar"
        style={
          Object {
            "backgroundColor": "#FF4136",
            "width": "50%",
          }
        }
      />
    </div>
  </ProgressBar>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Response item descriptions 1`] = `
Array [
  <p
    className="indicator-description"
  >
    Percent of structures sprayed over total
  </p>,
  <p
    className="indicator-description"
  >
    Percent of structures found over total
  </p>,
  <p
    className="indicator-description"
  >
    Percent of structures sprayed over found
  </p>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Response item titles 1`] = `
Array [
  <h6>
    Spray Coverage (Effectiveness)
  </h6>,
  <h6>
    Found Coverage
  </h6>,
  <h6>
    Spray Success Rate (PMI SC)
  </h6>,
  <h6>
    Reasons for not-sprayed structures
  </h6>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: Sidebar title 1`] = `
<h5>
  Akros_1
</h5>
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: breadcrumbs 1`] = `
Array [
  <li
    className="breadcrumb-item"
  >
    <Link
      key="0"
      to="/"
    >
      <LinkAnchor
        href="/"
        navigate={[Function]}
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="1"
      to="/intervention/irs/report"
    >
      <LinkAnchor
        href="/intervention/irs/report"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report"
          onClick={[Function]}
        >
          IRS Reporting
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="2"
      to="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce"
    >
      <LinkAnchor
        href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce"
          onClick={[Function]}
        >
          IRS 2019-09-05 TEST
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="3"
      to="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/22bc44dd-752d-4c20-8761-617361b4f1e7"
    >
      <LinkAnchor
        href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/22bc44dd-752d-4c20-8761-617361b4f1e7"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/22bc44dd-752d-4c20-8761-617361b4f1e7"
          onClick={[Function]}
        >
          Zambia
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="4"
      to="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/fd5a22ba-fa0e-4fdc-ae1c-1db8965b7b43"
    >
      <LinkAnchor
        href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/fd5a22ba-fa0e-4fdc-ae1c-1db8965b7b43"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/fd5a22ba-fa0e-4fdc-ae1c-1db8965b7b43"
          onClick={[Function]}
        >
          Lusaka
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="5"
      to="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/8f1fd4cf-264d-4ed6-8838-e538c5845d46"
    >
      <LinkAnchor
        href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/8f1fd4cf-264d-4ed6-8838-e538c5845d46"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/8f1fd4cf-264d-4ed6-8838-e538c5845d46"
          onClick={[Function]}
        >
          Lusaka_Test
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    className="breadcrumb-item"
  >
    <Link
      key="6"
      to="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/2bf9915d-8725-4061-983d-5938802ac0f0"
    >
      <LinkAnchor
        href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/2bf9915d-8725-4061-983d-5938802ac0f0"
        navigate={[Function]}
      >
        <a
          href="/intervention/irs/report/727c3d40-e118-564a-b231-aac633e6abce/2bf9915d-8725-4061-983d-5938802ac0f0"
          onClick={[Function]}
        >
          Lusaka HFC
        </a>
      </LinkAnchor>
    </Link>
  </li>,
  <li
    aria-current="page"
    className="active breadcrumb-item"
  >
    Akros_1
  </li>,
]
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: map renders correctly 1`] = `
<div>
  Mock component
</div>
`;

exports[`components/IRS Reports/IRSReportingMap renders correctly: page title 1`] = `
<h3
  className="mb-3 page-title"
>
  IRS 2019-09-05 TEST: Akros_1
</h3>
`;
